# hasm

./: .gitignore  CONFLICT.md  Cargo.toml  README.md
src/: asm.txt  cli.yml  lex.rs  main.rs  parse.rs  text.rs
src/cellia/: lexer.rs  mod.rs  op_encoding.txt  parser.rs
src/rocket88/: lexer.rs  mod.rs  parser.rs
