[package]
name = "chasm"
version = "0.1.0"
authors = ["Ashton Snapp <ashton@ashtons.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
logos = "0.12"
regex = "1.5"

[dependencies.clap]
version = "2.33"
default-features = false
features = ["suggestions", "yaml", "wrap_help"]