[package]
name = "chasm"
version = "0.1.0"
authors = ["Ashton Snapp <ashton@ashtons.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
logos = "0.12"
substring = "1.4.5"

[dependencies.clap]
version = "2.33"
default-features = false
features = ["suggestions", "yaml", "wrap_help"]