[package]
name = "hasm"
description = "The Homebrew Assembler"
version = "0.1.0"
authors = ["Ashton Snapp <ashton@ashtons.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12"
clap = { version = "3.2", features = ["cargo"] }